previous/prometheus/office-prometheus/monitoring/grafana/3_grafana_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  selector:
    app: grafana
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
