previous/prometheus/office-prometheus/monitoring/grafana/4_grafana_ingress.yaml
#	vim default-backend-deployment.yaml 
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: grafana-ingress
  namespace: monitoring
spec:
  rules:
  - host: grafana.brilliant.com.bd
    http:
      paths:  
      - backend:
          serviceName: grafana-service
          servicePort: 80
